# orchardist

./: .brief.md  .gitignore  .orchard.json  .pr-draft.md  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RULES.md  diag-multi.mjs  generate.go  go.mod  go.sum  gqlgen.yml  release-please-config.json  schema.graphql  tools.go
.claude/: ralph-loop.local.md  settings.local.json
.claude-context/: BRIEFING.md
.claude-plugin/: marketplace.json
.github/: labeler.yml
crates/chat-core/: Cargo.toml  README.md
crates/chat-core/src/: fanout.rs  handle.rs  identity.rs  lib.rs  paths.rs  store.rs  transcript.rs  types.rs
crates/chat-core/tests/: fanout_tests.rs  handle_tests.rs  store_tests.rs
crates/orchard/: CHANGELOG.md  Cargo.toml  build.rs  schema.json
crates/orchard-chat/: Cargo.toml
crates/orchard-chat/src/: main.rs
crates/orchard-chat/src/cmd/: history.rs  join.rs  leave.rs  list.rs  members.rs  mod.rs  send.rs  sender.rs  tail.rs
crates/orchard-chat/tests/: two_session_chat.rs
crates/orchard-dispatcher/: Cargo.toml
crates/orchard-dispatcher/src/: main.rs
crates/orchard-dispatcher/tests/: dispatch.rs
crates/orchard-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/orchard-gui/src-tauri/src/: chat.rs  commands.rs  lib.rs  main.rs  pty.rs  transcript.rs
crates/orchard-gui/src-tauri/tests/: chat_commands.rs  chat_watcher.rs  commands.rs
crates/orchard-worktree/: Cargo.toml
crates/orchard-worktree/src/: main.rs
crates/orchard-worktree/src/cmd/: ls.rs  mod.rs  mv.rs  new.rs  path.rs  prune.rs  rm.rs
crates/orchard-worktree/tests/: cli.rs
crates/orchard/examples/: daemon_smoke.rs
crates/orchard/features/: tui-auto-refresh.feature  tui-claude-instance-enrichment.feature  tui-daemon-error-handling.feature  tui-dashboard-render.feature  tui-federated-session-switcher.feature  tui-health-probe.feature  tui-local-mutations.feature  tui-manual-refresh.feature  tui-remote-worktree-federation.feature  tui-session-worktree-join.feature  tui-snapshot-persistence.feature  tui-worktree-pr-issue-badges.feature
crates/orchard/hooks/: orchard-state.sh
crates/orchard/src/: browser.rs  build_state.rs  cache.rs  cache_sources.rs  chat.rs  ci_state.rs  classify.rs  claude_state.rs  derive.rs  events.rs  federation.rs  federation_topology.rs  git_parse.rs  github.rs  global_config.rs  heal.rs  hook_enrich.rs  join.rs  json_output.rs  json_output_types.rs  lib.rs  logger.rs  main.rs  merge_readiness.rs  merge_remote.rs  orchard_snapshot.rs  orchard_state.rs  paths.rs  priority.rs  refresh_parallel.rs  remote.rs  remote_adapter.rs  restore.rs  review_comment.rs  session.rs  session_discovery.rs  sessions_cli.rs  sessions_index.rs  setup_remote.rs  shell.rs  (+8 more)
crates/orchard/src/cli/: claude_account.rs  daemon_cmd.rs  gh.rs  git.rs  host_services.rs  mod.rs  ps.rs  tmux_cmd.rs
crates/orchard/src/daemon/: client.rs  federated.rs  mod.rs  types.rs  work_view_adapter.rs  work_view_cache.rs
crates/orchard/src/models/: check.rs  claude.rs  issue.rs  mod.rs  pr.rs  repo.rs  session.rs  worktree.rs
crates/orchard/src/sources/: hosts.rs  mod.rs  refresh.rs  tmux.rs  worktrees.rs
crates/orchard/src/tui/: dialogs.rs  fuzzy.rs  last_selection.rs  list.rs  message.rs  mod.rs  refresh.rs  sessions.rs  state.rs  theme.rs  worktree_ops.rs
crates/orchard/src/watch/: daemon.rs  debounce.rs  diff.rs  event.rs  mod.rs  subscription.rs  threshold.rs
crates/orchard/src/webhook/: handler.rs  mod.rs  normalize.rs  normalize_tests.rs  port.rs  server.rs  signature.rs  tailer.rs  tailer_tests.rs
crates/orchard/tests/: ac11_mutation_invariance.rs  ac4_no_restore_from_read_path.rs  ac6_no_fallback.rs  ac7_dashboard_nonblocking.rs  ac7_no_tty_regression.rs  binary_integration.rs  cache_integration.rs  chat_integration.rs  config_integration.rs  daemon_e2e.rs  derive_integration.rs  e2e_launch_remote.rs  federation_transitive_e2e.rs  federation_wire_up.rs  heal_test.rs  hook_script_integration.rs  json_freshness_integration.rs  labels_integration.rs  phase_field_integration.rs  remote_port.rs  review_comment_json_integration.rs  signal_lexicon_integration.rs  tmux_integration.rs  unresolved_threads_e2e.rs  unresolved_threads_integration.rs  webhook_integration.rs  worktree_detection.rs
crates/orchard/tests/common/: mod.rs
crates/worktree-core/: Cargo.toml
crates/worktree-core/src/: create.rs  destroy.rs  lib.rs  list.rs  path.rs  prune.rs  repo.rs
daemon/: README.md  schema.graphql
decide-wisdom/: 2026-05-19-feature-boundary-triage.md  2026-05-19-feature-parity-no-unimplemented.md  2026-05-19-issue640-scope.md  index.md
docs/: 650-codex-followup.md  architecture.md  orchardist-as-tmux-app.md  projects-api-evaluation.md  testing-philosophy.md  webhook-setup.md
hooks/: orchard-state.sh
npm/: .npmignore  install.js  package.json  run.js
scripts/: README.md  ac9-federated-orchard-e2e.sh  check-feature-parity-daemon.sh  check-feature-parity-gui.sh  check-feature-parity-tui.sh  gh-issue-create.sh  gh-issue-create_test.sh  gh-pr-comment.sh  gh-pr-review_test.sh  git-worktree-create.sh  host-service-restart_test.sh  host-service-start_test.sh  host-service-stop_test.sh  orchard-decide.sh  orchard-monitor.sh  orchardist-serial-driver.sh  tmux-kill-pane.sh  tmux-kill-pane_test.sh  tmux-new-window_test.sh  tmux-send-text_test.sh
src/: build_state.rs  cache.rs  cache_sources.rs  chat.rs  claude_state.rs  clipboard.rs  config.rs  derive.rs  events.rs  git.rs  github.rs  global_config.rs  heal.rs  issue_sync.rs  json_output.rs  lib.rs  logger.rs  main.rs  navigation.rs  notify.rs  orchard_state.rs  paths.rs  priority.rs  remote.rs  repo_config.rs  session.rs  session_discovery.rs  setup_remote.rs  shell.rs  state.rs  status.rs  tmux.rs  transfer.rs  types.rs
tests/: binary_integration.rs  cache_integration.rs  collector_pipeline_test.rs  config_integration.rs  derive_integration.rs  heal_test.rs  hook_script_integration.rs  integration_test.rs  tmux_integration.rs  tmux_session_test.rs
(+1030 files in other folders)
