[package]
name = "orchard"
version = "0.1.0"
edition = "2024"
description = "Interactive TUI for managing git worktrees, PR status, and tmux sessions"
license = "MIT"
repository = "https://github.com/drewdrewthis/git-orchard-rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
