[workspace]
resolver = "2"
members = [
    "crates/chat-core",
    "crates/orchard",
    "crates/orchard-chat",
    "crates/orchard-dispatcher",
    "crates/orchard-gui/src-tauri",
    "crates/orchard-worktree",
    "crates/worktree-core",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
