[package]
name = "chat-core"
version = "0.1.0"
edition = "2024"
description = "Cross-machine chat substrate: append-only JSONL rooms + tmux send-keys fanout with Level 2 receipts"
license = "MIT"
repository = "https://github.com/drewdrewthis/orchardist"

[lib]
name = "chat_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde-well-known"] }
gethostname = "0.4"

[dev-dependencies]
tempfile = "3"
