[package]
name = "orchard-chat"
version = "0.1.0"
edition = "2024"
description = "Agent-to-agent chat CLI: thin clap wrapper on chat-core (orchard send/chat verbs)"
license = "MIT"
repository = "https://github.com/drewdrewthis/orchardist"

[[bin]]
name = "orchard-chat"
path = "src/main.rs"

[dependencies]
chat-core = { path = "../chat-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
