[package]
name = "orchard"
version = "1.1.0"
edition = "2024"
description = "Interactive TUI for managing git worktrees, PR status, and tmux sessions"
license = "MIT"
repository = "https://github.com/drewdrewthis/git-orchard-rs"
homepage = "https://github.com/drewdrewthis/git-orchard-rs"
keywords = ["git", "worktree", "tui", "tmux", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "orchard"
path = "src/lib.rs"

[[bin]]
name = "orchard-tui"
path = "src/main.rs"

[dependencies]
worktree-core = { path = "../worktree-core" }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
color-eyre = "0.6"
tokio = { version = "1", features = ["full"] }
regex = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
globset = "0.4"
open = "5"
shellexpand = "3.1.2"
throbber-widgets-tui = "0.11.0"
tui-scrollview = "0.6.2"
nucleo-matcher = "0.3.1"
ctrlc = "3"
http = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
http-body-util = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
schemars = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[build-dependencies]
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
