[package]
name = "orchard-gui"
version = "0.0.1"
description = "Orchard GUI — Tauri + Svelte frontend for the Claude session deep view"
edition = "2021"
publish = false

[lib]
name = "orchard_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
test = true
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
